--- a/src/front-end/home-page/styles/header/header.scss
+++ b/src/front-end/home-page/styles/header/header.scss
@@ -13,11 +13,13 @@ header {
 		align-items: center;
 		justify-content: space-between;
 		width: 100%;
-		padding: 21px 0px;
 		background-color: var(--primary-color);
+		padding-top: 21px;
+		padding-bottom: 21px;
 
 		& > a {
 			display: flex;
+			padding: 14px 0px;
 
 			& > img:first-of-type {
 				@extend %default-height-size;
@@ -39,13 +41,18 @@ header {
 			gap: 7px;
 
 			& > button {
+				&:hover {
+					background-color: rgba(0, 0, 0, 0.123);
+				}
+
 				@extend %default-font-size;
+				color: white;
 				width: 42px;
 				min-width: 42px;
 				height: 42px;
+				transition: ease-in-out 0.35s;
 				min-height: 42px;
 				border-radius: 100%;
-				color: white;
 			}
 
 			& > button:last-of-type {
@@ -59,16 +66,13 @@ header {
 		display: flex;
 		align-items: center;
 		width: 100%;
-		gap: 7px;
+		gap: 17.5px;
 		background-color: var(--light-gray);
-		padding: 10.5px 0px;
+		padding-top: 10.5px;
+		padding-bottom: 10.5px;
 
 		& > button {
 			@extend %default-font-size;
-			width: 42px;
-			min-width: 42px;
-			height: 42px;
-			min-height: 42px;
 			border-radius: 100%;
 			color: var(--primary-color);
 		}
@@ -160,7 +164,6 @@ div.search-container {
 	}
 }
 
-//@media
 @media (min-width: 700px) {
 	header {
 		& > div:first-of-type {
@@ -183,18 +186,6 @@ div.search-container {
 	div.search-container {
 		& > input {
 			font-size: 14px;
-		}
-	}
-}
-
-@media screen and (min-width: 500px) {
-	header {
-		button {
-			&:hover {
-				background-color: rgba(0, 0, 0, 0.089);
-			}
-
-			transition: ease-in-out 0.35s;
 		}
 	}
 }
