--- a/src/front-end/admin-get-page/styles/main/main.css
+++ b/src/front-end/admin-get-page/styles/main/main.css
@@ -1,44 +1,92 @@
-main > div:first-of-type {
+main > div:last-of-type {
   padding-right: 24.5px;
   padding-left: 24.5px;
 }
 
 @media (min-width: 700px) {
-  main > div:first-of-type {
+  main > div:last-of-type {
     padding-right: 35px;
     padding-left: 35px;
   }
 }
 @media (min-width: 800px) {
-  main > div:first-of-type {
+  main > div:last-of-type {
     padding-right: 7vw;
     padding-left: 7vw;
   }
 }
 @media (min-width: 1000px) {
-  main > div:first-of-type {
+  main > div:last-of-type {
     padding-right: 9.8vw;
     padding-left: 9.8vw;
   }
 }
 @media (min-width: 1300px) {
-  main > div:first-of-type {
+  main > div:last-of-type {
     padding-right: 14vw;
     padding-left: 14vw;
   }
 }
 main {
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 100vh;
+  background-color: var(--light-gray);
   position: relative;
 }
 main > div:first-of-type {
+  z-index: 2;
+  padding: 28px;
+}
+main > div:first-of-type > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 14px;
+  padding: 28px;
+  max-width: 385px;
+  width: 100%;
+  background-color: white;
+}
+main > div:first-of-type > div > h1 {
+  color: var(--primary-color);
+}
+main > div:first-of-type > div > div:first-of-type {
+  padding-top: 28px;
+}
+main > div:first-of-type > div > div:first-of-type > form {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+}
+main > div:first-of-type > div > div:first-of-type > form > button {
+  gap: 7px;
+  padding: 9.1px;
+  border: 2px solid var(--primary-color);
+  font-size: 15.4px;
+  font-family: var(--font-bold);
+  background-color: var(--primary-color);
+  border-radius: 14px;
+  color: white;
+  transition: ease-in-out 0.35s;
+}
+main > div:first-of-type > div > div:first-of-type > form > button:hover {
+  background-color: white;
+  color: var(--primary-color);
+}
+main > div:last-of-type {
+  z-index: 1;
   width: 100%;
   height: 40vh;
   background-color: var(--primary-color);
   position: absolute;
   bottom: 0px;
 }
-main > div:first-of-type > div:first-of-type {
+main > div:last-of-type > div:first-of-type {
   width: 100%;
   height: 100px;
   overflow: hidden;
@@ -47,6 +95,80 @@ main > div:first-of-type > div:first-of-type {
   top: -51.8px;
   left: 50%;
 }
-main > div:first-of-type > div:first-of-type svg path {
+main > div:last-of-type > div:first-of-type svg path {
   fill: var(--primary-color);
+}
+
+div.custom-input {
+  position: relative;
+}
+div.custom-input label {
+  cursor: text;
+  color: var(--regular-gray);
+  transition: ease-in-out 0.28s;
+  font-size: 14px;
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 14px;
+}
+div.custom-input input {
+  width: 100%;
+  padding: 9.1px 14px;
+  border-radius: 11.9px;
+  font-size: 14px;
+  border: 2px solid var(--regular-gray);
+  transition: ease-in-out 0.28s;
+  color: var(--dark-gray);
+}
+div.custom-input input:not(:-moz-placeholder-shown) + label {
+  color: var(--regular-gray);
+  padding: 0px 7px;
+  font-size: 11.9px;
+  background-color: white;
+  transform: translateY(-170%);
+}
+div.custom-input input:not(:placeholder-shown) + label {
+  color: var(--regular-gray);
+  padding: 0px 7px;
+  font-size: 11.9px;
+  background-color: white;
+  transform: translateY(-170%);
+}
+div.custom-input input:focus + label {
+  color: var(--primary-color);
+  padding: 0px 7px;
+  font-size: 11.9px;
+  background-color: white;
+  transform: translateY(-170%);
+}
+div.custom-input input:focus {
+  outline: none;
+  border: 2px solid var(--primary-color);
+}
+div.custom-input input::-moz-placeholder {
+  filter: opacity(0%);
+}
+div.custom-input input::placeholder {
+  filter: opacity(0%);
+}
+div.custom-input input::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: transparent;
+}
+div.custom-input input:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: transparent;
+}
+div.custom-input input::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: transparent;
+}
+div.custom-input input:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: transparent;
+}
+div.custom-input input:-webkit-autofill, div.custom-input input:-webkit-autofill:hover, div.custom-input input:-webkit-autofill:focus, div.custom-input input:-webkit-autofill:active {
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
 }/*# sourceMappingURL=main.css.map */
