--- a/src/front-end/root-get-page/styles/main/main.css
+++ b/src/front-end/root-get-page/styles/main/main.css
@@ -26,7 +26,7 @@ div.product-section-container > div > div:last-of-type > div > div:first-of-type
   height: 100%;
   flex-direction: column;
   align-items: center;
-  gap: 28px;
+  gap: 21px;
   background-color: white;
   padding: 21px;
 }
@@ -52,13 +52,13 @@ div.product-section-container > div > div:last-of-type > div > div:first-of-type
   font-size: 11.9px;
 }
 div.product-section-container > div > div:last-of-type > div > div:first-of-type > div:nth-child(2) {
-  display: inline-block;
   width: 100%;
+  padding-bottom: 5.6px;
 }
 div.product-section-container > div > div:last-of-type > div > div:first-of-type > div:nth-child(2) > hr {
   border: 0px;
   height: 1px;
-  background-color: rgba(0, 0, 0, 0.37);
+  background-color: rgba(0, 0, 0, 0.178);
 }
 div.product-section-container > div > div:last-of-type > div > div:first-of-type img {
   width: 182px;
@@ -164,6 +164,8 @@ main {
 }
 
 div.loading-screen-container {
+  filter: opacity(0%);
+  pointer-events: none;
   z-index: 4;
   display: flex;
   align-items: center;
