--- a/src/front-end/root-get-page/styles/main/main.scss
+++ b/src/front-end/root-get-page/styles/main/main.scss
@@ -11,6 +11,9 @@ div.loading-screen-container {
 		pointer-events: none;
 	}
 
+		filter: opacity(0%);
+		pointer-events: none;
+
 	z-index: 4;
 	display: flex;
 	align-items: center;
