--- a/src/front-end/root-get-page/styles/aside/aside.scss
+++ b/src/front-end/root-get-page/styles/aside/aside.scss
@@ -139,3 +139,12 @@ ul.categories-list {
 		}
 	}
 }
+
+@media (min-width: 1700px) {
+	aside {
+		& > div {
+			width: 364px;
+			min-width: 364px;
+		}
+	}
+}
