--- a/src/front-end/admin-get-page/styles/header/header.css
+++ b/src/front-end/admin-get-page/styles/header/header.css
@@ -7,6 +7,12 @@ header > div:first-of-type > a > img:first-of-type {
   height: 17.5px;
 }
 
+@media (min-width: 375px) {
+  header > div:first-of-type {
+    padding-right: 28px;
+    padding-left: 28px;
+  }
+}
 @media (min-width: 700px) {
   header > div:first-of-type {
     padding-right: 35px;
@@ -39,11 +45,17 @@ header > div:first-of-type > a > img:first-of-type {
 }
 @media (min-width: 1700px) {
   header > div:first-of-type {
-    padding-right: 17.5vw;
-    padding-left: 17.5vw;
+    padding-right: 19.6vw;
+    padding-left: 19.6vw;
   }
   header > div:first-of-type > a > img:first-of-type {
     height: 21px;
+  }
+}
+@media (min-width: 2880px) {
+  header > div:first-of-type {
+    padding-right: 30%;
+    padding-left: 30%;
   }
 }
 header {
@@ -68,4 +80,6 @@ header > div:first-of-type > a {
 }
 header > div:first-of-type > a > img:first-of-type {
   filter: grayscale(100%) brightness(200%);
-}/*# sourceMappingURL=header.css.map */
+}
+
+/*# sourceMappingURL=header.css.map */
