--- a/src/front-end/global/styles/index/index.scss
+++ b/src/front-end/global/styles/index/index.scss
@@ -19,8 +19,20 @@
 	--dark-gray: rgb(20, 20, 20);
 }
 
+/* Width and Height */
 *::-webkit-scrollbar {
-	display: none;
+	width: 13.3px;
+	height: 13.3px;
+}
+
+*::-webkit-scrollbar-track {
+	background-color: var(--light-gray);
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: rgb(120, 120, 120);
+	border: 3.5px solid var(--light-gray);
+	border-radius: 21px;
 }
 
 *:focus-visible {
@@ -34,6 +46,10 @@
 	font-family: var(--font-regular);
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
+}
+
+body {
+	overflow-x: hidden;
 }
 
 body,
@@ -70,7 +86,6 @@ img {
 	-khtml-user-drag: none;
 	-moz-user-drag: none;
 	-o-user-drag: none;
-	user-drag: none;
 }
 
 button {
