--- a/src/front-end/root-get-page/styles/footer/footer.css
+++ b/src/front-end/root-get-page/styles/footer/footer.css
@@ -3,21 +3,20 @@ footer > div:first-of-type {
   padding-left: 24.5px;
 }
 
-footer > div:first-of-type > div:last-of-type > div > p:last-of-type {
-  font-size: 12.6px;
-}
-
 footer > div:first-of-type > div:last-of-type > div h1 {
   font-size: 28px;
 }
 
+@media (min-width: 375px) {
+  footer > div:first-of-type {
+    padding-right: 28px;
+    padding-left: 28px;
+  }
+}
 @media (min-width: 700px) {
   footer > div:first-of-type {
     padding-right: 35px;
     padding-left: 35px;
-  }
-  footer > div:first-of-type > div:last-of-type > div > p:last-of-type {
-    font-size: 14px;
   }
   footer > div:first-of-type > div:last-of-type > div h1 {
     font-size: 31.5px;
@@ -43,8 +42,14 @@ footer > div:first-of-type > div:last-of-type > div h1 {
 }
 @media (min-width: 1700px) {
   footer > div:first-of-type {
-    padding-right: 17.5vw;
-    padding-left: 17.5vw;
+    padding-right: 19.6vw;
+    padding-left: 19.6vw;
+  }
+}
+@media (min-width: 2880px) {
+  footer > div:first-of-type {
+    padding-right: 30%;
+    padding-left: 30%;
   }
 }
 footer {
@@ -76,7 +81,7 @@ footer > div:first-of-type > div:last-of-type > div {
   display: flex;
   flex-direction: column;
   text-align: center;
-  gap: 7px;
+  gap: 17.5px;
   width: 100%;
   max-width: 385px;
 }
@@ -86,9 +91,14 @@ footer > div:first-of-type > div:last-of-type > div h1 {
 footer > div:first-of-type > div:last-of-type > div p {
   color: white;
   word-break: break-all;
-  padding: 0px 0px 21px 0px;
+  padding-bottom: 10.5px;
 }
-footer > div:first-of-type > div:last-of-type > div a {
+footer > div:first-of-type > div:last-of-type > div > div {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+footer > div:first-of-type > div:last-of-type > div > div a {
   background-color: white;
   color: var(--primary-color);
   transition: ease-in-out 0.35s;
@@ -103,17 +113,29 @@ footer > div:first-of-type > div:last-of-type > div a {
   font-family: var(--font-bold);
   border-radius: 70px;
 }
-footer > div:first-of-type > div:last-of-type > div a:hover {
+footer > div:first-of-type > div:last-of-type > div > div a:hover {
   background-color: var(--primary-color);
   color: white;
 }
-footer > div:first-of-type > div:last-of-type > div a i {
+footer > div:first-of-type > div:last-of-type > div > div a i {
   font-size: 18.9px;
 }
-footer > div:first-of-type > div:last-of-type > div > div:first-of-type {
+footer > div:first-of-type > div:last-of-type > div > div > div {
   display: flex;
   gap: 7px;
 }
 footer > div:first-of-type > div:last-of-type > div > p:last-of-type {
+  font-size: 14px;
   padding: 105px 0px 0px 0px;
-}/*# sourceMappingURL=footer.css.map */
+}
+
+@media (min-width: 1700px) {
+  footer > div:first-of-type > div:last-of-type > div > div a {
+    font-size: 16.1px;
+  }
+  footer > div:first-of-type > div:last-of-type > div > div a i {
+    font-size: 19.6px;
+  }
+}
+
+/*# sourceMappingURL=footer.css.map */
