--- a/src/front-end/root-get-page/styles/main/main.scss
+++ b/src/front-end/root-get-page/styles/main/main.scss
@@ -11,9 +11,6 @@ div.loading-screen-container {
 		pointer-events: none;
 	}
 
-		filter: opacity(0%);
-		pointer-events: none;
-
 	z-index: 4;
 	display: flex;
 	align-items: center;
@@ -21,7 +18,7 @@ div.loading-screen-container {
 	width: 100%;
 	height: 100vh;
 	background-color: var(--primary-color);
-	transition: ease-in-out 0.56s;
+	transition: ease-in-out 1s;
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -36,10 +33,10 @@ div.loading-screen-container {
 		align-items: left;
 		gap: 14px;
 		filter: opacity(0%);
+		transition: ease-in-out 1.5s;
 
 		& > img {
 			@extend %big-height-size;
-			transition: ease-in-out 0.56s;
 		}
 
 		& > div {
@@ -53,11 +50,6 @@ div.loading-screen-container {
 }
 
 div.propagandas-container {
-	&.--on {
-		display: block;
-	}
-
-	display: none;
 	position: relative;
 
 	button {
@@ -80,6 +72,10 @@ div.propagandas-container {
 	}
 
 	& > div:first-of-type {
+		&::-webkit-scrollbar {
+			display: none;
+		}
+
 		display: flex;
 		overflow: scroll;
 
@@ -165,13 +161,21 @@ div.product-section-container {
 		}
 
 		& > div:last-of-type {
+			&::-webkit-scrollbar {
+				display: none;
+			}
+
 			&.--special {
-				display: flex;
-				flex-wrap: wrap;
+				display: grid;
+				grid-template-columns: auto auto;
+				gap: 14px;
 
 				& > div {
-					flex: 1 1 auto;
-					width: auto;
+					&.--special:last-of-type {
+						grid-column: span 2;
+					}
+
+					width: 100%;
 				}
 			}
 
@@ -195,7 +199,7 @@ div.product-section-container {
 @media (hover: none) {
 	div.loading-screen-container {
 		& > div {
-			transform: translateY(-100%);
+			transform: translateY(-150%);
 		}
 	}
 }
