--- a/src/front-end/root-get-page/styles/main/main.css
+++ b/src/front-end/root-get-page/styles/main/main.css
@@ -175,7 +175,7 @@ div.product-section-container > div > div:last-of-type > div a i {
   }
 }
 main {
-  padding: 140px 0px;
+  padding: 140px 0;
   background-color: var(--light-gray);
 }
 
@@ -189,8 +189,8 @@ div.loading-screen-container {
   background-color: var(--primary-color);
   transition: ease-in-out 1s;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 }
 div.loading-screen-container.--off {
   filter: opacity(0%);
@@ -222,16 +222,16 @@ div.propagandas-container button {
   width: 50%;
   height: 100%;
   position: absolute;
-  top: 0px;
+  top: 0;
 }
 div.propagandas-container button:focus {
   outline: none;
 }
 div.propagandas-container button:first-of-type {
-  left: 0px;
+  left: 0;
 }
 div.propagandas-container button:last-of-type {
-  right: 0px;
+  right: 0;
 }
 div.propagandas-container > div:first-of-type {
   display: flex;
@@ -259,14 +259,14 @@ div.propagandas-container > p {
 }
 
 div.product-section-container {
-  padding: 35px 0px;
+  padding: 35px 0;
 }
 div.product-section-container > div {
-  padding: 42px 0px;
+  padding: 42px 0;
 }
 div.product-section-container > div.--special {
-  margin: 42px 0px;
-  padding: 56px 0px;
+  margin: 42px 0;
+  padding: 56px 0;
   background-color: var(--primary-color);
   position: relative;
 }
@@ -278,8 +278,20 @@ div.product-section-container > div.--special::before {
   border: 4.9px solid var(--primary-color);
   transform: translateY(-50%);
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
+}
+div.product-section-container > div.--special::after {
+  content: "";
+  width: 350px;
+  height: 350px;
+  border-radius: 100%;
+  filter: opacity(0%);
+  border: 4.9px solid var(--primary-color);
+  transform: translateY(-60%);
+  position: absolute;
+  bottom: -480px;
+  right: -41px;
 }
 div.product-section-container > div.--special h1 {
   color: white !important;
@@ -295,7 +307,7 @@ div.product-section-container > div > div:first-of-type h1 {
   overflow: hidden;
   text-overflow: ellipsis;
   color: var(--dark-gray);
-  padding: 10.5px 0px 10.5px 19.6px;
+  padding: 10.5px 0 10.5px 19.6px;
   position: relative;
 }
 div.product-section-container > div > div:first-of-type h1::before {
@@ -307,7 +319,7 @@ div.product-section-container > div > div:first-of-type h1::before {
   transform: translateY(-50%);
   position: absolute;
   top: 50%;
-  left: 0px;
+  left: 0;
 }
 div.product-section-container > div > div:last-of-type {
   display: flex;
@@ -352,22 +364,15 @@ div.product-section-container > div > div:last-of-type > div {
 }
 @media (min-width: 700px) {
   main {
-    padding: 84px 0px 140px 0px;
+    padding: 84px 0 140px 0;
   }
-  div.product-section-container > div.--on::before {
+  div.product-section-container {
+    padding: 35px 0;
+  }
+  div.product-section-container > div.--special::before, div.product-section-container > div.--special::after {
+    filter: opacity(100%);
     width: 420px;
     height: 420px;
-  }
-  div.product-section-container > div.--on::after {
-    content: "";
-    width: 420px;
-    height: 420px;
-    border-radius: 100%;
-    border: 4.9px solid var(--primary-color);
-    transform: translateY(-50%);
-    position: absolute;
-    right: 0px;
-    bottom: -50%;
   }
 }
 @media (min-width: 910px) {
